--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/node-logger": "^6.1.10",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.10",
+    "chromatic": "^5.4.0",
     "react-test-renderer": "^17.0.1"
   }
 }
